# aura

./: CLAUDE.md  Cargo.toml  README.md
crates/aura/: Cargo.toml
crates/aura/src/: main.rs
crates/aura_codegen/: Cargo.toml
crates/aura_codegen/src/: codegen.rs  lib.rs
crates/aura_codegen/src/codegen/: calls.rs  control_flow.rs  exprs.rs  functions.rs  matching.rs  mod.rs  ops.rs  structs.rs  sum_types.rs  tests.rs  types.rs
crates/aura_common/: Cargo.toml
crates/aura_common/src/: intern.rs  lib.rs  span.rs
crates/aura_lexer/: Cargo.toml
crates/aura_lexer/src/: chumsky_lexer.rs  interp.rs  lexer.rs  lib.rs  tests.rs  token.rs
crates/aura_parser/: Cargo.toml
crates/aura_parser/src/: ast.rs  chumsky_parser.rs  lib.rs  parser.rs
crates/aura_resolve/: Cargo.toml
crates/aura_resolve/src/: lib.rs  resolve.rs  scope.rs
crates/aura_rt/: Cargo.toml
crates/aura_rt/src/: lib.rs
crates/aura_types/: Cargo.toml
crates/aura_types/src/: infer.rs  lib.rs  types.rs
crates/aura_types/tests/: p1_sources.rs  p2_sources.rs  p3_sources.rs
crates/aurac/: Cargo.toml
crates/aurac/src/: main.rs
crates/aurac/tests/: e2e_tests.rs  p3_compile_tests.rs
docs/: aura-lang-proposal.md
docs/impl/: README.md
docs/impl/p0-core-compiler/: 01-lexer.md  02-parser-ast.md  03-name-resolution.md  04-basic-types.md  05-basic-codegen.md
docs/impl/p1-type-system/: 01-algebraic-types.md  02-generics.md  03-concepts.md  04-pattern-matching.md  05-methods.md
docs/impl/p2-effects-errors/: 01-effect-system.md  02-effect-polymorphism.md  03-error-handling.md  04-refined-types.md
docs/impl/p3-runtime/: 01-gc-memory.md  02-closures.md  03-async-concurrency.md  04-runtime-system.md
docs/impl/p4-stdlib-tooling/: 01-stdlib-core.md  02-ir-codegen.md  03-optimizer.md  04-formatter-linter.md  05-lsp.md  06-package-manager.md  (+1 more)
tests/fixtures/: booleans.aura  break_continue.aura  closure_capture_mut.aura  fibonacci.aura  for_loop.aura  functions.aura  hello.aura  if_else.aura  nested_calls.aura
(+89 files in other folders)
